# technical_patres

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_04_1226-cde0383068e4_create_all_tables.py  2025_06_05_1224-a72369b7f06f_description_added.py  2025_06_05_1225-f08fd63a84c5_description_changed.py
src/: .env  .env.public  .env.template  main.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/auth/: backend.py  dependencies.py  exceptions.py  service.py  user_manager.py  views.py
src/api/v1/books/: dependencies.py  exceptions.py  repository.py  schemas.py  serializer.py  service.py  validators.py  views.py
src/api/v1/readers/: dependencies.py  exceptions.py  repository.py  schemas.py  serializer.py  service.py  views.py
src/core/: settings.py
src/core/auth/: users_db.py
src/core/certs/: README.md  jwt-private.pem  jwt-public.pem
src/core/config/: __init__.py  app_config.py  database_config.py  exception_handler_config.py  swagger_config.py
src/core/models/: __init__.py  base.py  book.py  borrowed_books.py  reader.py  user.py
src/core/models/mixins/: __init__.py
src/scripts/: get_routes.py
src/tools/: __init__.py  base_custom_settings.py  errors_base.py  exceptions.py
tests/e2e/: test_endpoints.py
tests/e2e/fixtures/: __init__.py  auth.py
tests/unit/: test_library_service.py
tests/unit/fixtures/: __init__.py  books.py  borrowed_book.py  readers.py  session.py
