[project]
name = "7-patres"
version = "0.1.0"
description = "Test task"
authors = [
    {name = "Primero1800",email = "Primero@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

